fixed branding alignment

--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -24,6 +24,7 @@
 .branding-byline {
   font-size: 2.5rem;
   font-weight: $light-text;
+  text-align: right;
   @media only screen and (max-width: 40em) { 
     font-size: 1.41rem;
   }
